# rt-dsl

./: .gitignore  3diono_wisdom.json  3droad_wisdom.json  Cargo.toml  README.md  auto_tune_benchmark.sh  autotune.py  autotuned_arkade_benchmark.sh  final_arkade_benchmark.sh  final_native_benchmark.sh  kitti_wisdom.json  native_tune_and_benchmark.sh  plot_benchmark.py  porto_wisdom.json  run_tuned_benchmark.sh  simple_benchmark.sh  validate_benchmark.py  validate_knn_robust.py
gprt-codegen/: Cargo.toml
gprt-codegen/src/: lib.rs
gprt-core/: Cargo.toml
gprt-core/src/: lib.rs  morton.rs
gprt-ir/: Cargo.toml
gprt-ir/src/: lib.rs
gprt-macros/: Cargo.toml
gprt-macros/shaders/: sphere_is.cu
gprt-macros/src/: lib.rs  lib.rs.save
gprt-optix/: Cargo.toml  build.rs
gprt-optix/host/: kernels.cu  main.cpp  main.cpp.save  optix_runner.cpp
gprt-optix/src/: dispatch.rs  lib.rs
gprt-profiler/: Cargo.toml
gprt-profiler/src/: main.rs
gprt-sandbox/: Cargo.toml  UniformDist.py  benchmark.sh  benchmark_all.sh  benchmark_bh.sh  final_benchmark.sh  generate_uniform.py  inspect_3diono.py  inspect_failures.py  kitty.py  prepare_data.py  run_head_to_head.sh  sweep_params.sh  sweep_radii.sh  validate.py  validate_full.py  validate_knn.py  verify_physics.py
gprt-sandbox/src/: io.rs  main.rs
