[package]
name = "gprt-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
gprt-core = { path = "../gprt-core" }
gprt-macros = { path = "../gprt-macros" }
gprt-optix = { path = "../gprt-optix" }
gprt-ir = { path = "../gprt-ir" }
gprt-codegen = { path = "../gprt-codegen" }
rayon = "1.8"
memmap2 = "0.9"
serde_json = "1.0.150"

[features]
default = ["optix"] # Enable optix by default for the sandbox
optix = ["gprt-macros/optix"] # Pass the feature down to gprt-macros
